--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@ant-design/react-native": "^4.2.0",
+    "@react-native-picker/picker": "^2.2.1",
+    "antd-mobile": "^5.0.0-rc.1",
     "expo": "~43.0.2",
     "expo-cli": "^4.13.0",
     "expo-splash-screen": "~0.13.5",
@@ -16,6 +19,8 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
